File Name: CHANGES

03/09/2018 FASP 2.0.6:
- Fix a bug in fasp_mem_free. Set all memory pointers to NULL by hand.
- Update documentation and fasp webpage.
- Update VS10 settings for OMP version in Windows 7.
- Try to remove unused parts in OMP and look for bugs causing divergence.

01/04/2018 FASP 2.0.5:
- Try to unify itsolver and itsolver_s. 
- Add regression tests for itsolver_s (iterative methods with safe-net).
- Update regression test results.
- New TODO list.
- Update user's guide for the recent changes.
- Update webpage documentation zip file.
- Update fasp webpage.

10/21/2017 FASP 2.0.4:
- Format WARNING messages for all functions.
- Format ERROR messages for all functions.
- Format DEBUG messages for all functions.
- Fix several TODO's listed in the functions.
- Get rid of ALL warnings in DEBUG mode.
- Replace Direct with Pardiso; Direct.lib is NOT used any more on Windows.
- Update CMakeFile Policy for OpenMP and clean up.
- Update regression results for MM and MF; new version is better.
- Update TODO list.

09/24/2017 FASP 2.0.3:
- Add testgs.c; preparing for testing new sparse matrix data structures.
- When reading matrix data, check and quit if error occurs.
- Important: Name change for some file reading functions.
- Important: Name change for preconditioner data in BSR.
- Fix ALL warnings from Doxygen.
- Update reference manual and user's guide.
- Update regression results.
- Update tutorial example output.

09/23/2017 FASP 2.0.2:
- Remove almost ALL unused variables and functions.
- Rewrite "skip rest of the line" to avoid problems with long lines.
- Get rid of some OMP pragma which causes indentation problems.
- Change some function names in pairwise aggregation.
- Fix problems with auto-indentation except for ItrSmootherCSRpoly.c!!!
- Fix an input parameter problem in fasp4ns.
- Test GCC7.2 and it works just fine.
- Add an SA AMG parameter for smoothing restriction or not.
- Update output information for AMG, iterative, etc.